sfdx-source/OnlineProfile/main/default/objects/MyProfile__c/MyProfile__c.object-meta.xml
<CustomObject>
    <label>マイプロフィール</label>
    <nameField>
        <label>プロフィール名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>