sfdx-source/OnlineProfile/main/default/objects/MyProfile__c/fields/ContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>ContentVersionId__c</fullName>
    <label>コンテンツバージョンID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>