sfdx-source/OnlineProfile/main/default/objects/MyProfile__c/fields/FileType__c.field-meta.xml
<CustomField>
    <fullName>FileType__c</fullName>
    <label>ファイルの種類</label>
    <length>4</length>
    <type>Text</type>
</CustomField>