sfdx-source/OnlineProfile/main/default/objects/MyProfile__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IF(ISBLANK(ImageUrl__c),
    null,
    HYPERLINK(ImageUrl__c, IMAGE(ImageUrl__c, &quot;画像&quot;), &quot;_blank&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>画像</label>
    <type>Text</type>
</CustomField>