sfdx-source/OnlineProfile/main/default/objects/MyProfile__c/fields/ImageUrl__c.field-meta.xml
<CustomField>
    <fullName>ImageUrl__c</fullName>
    <formula>IF(ISBLANK(ImageUrlParameter__c),
    null,
    LEFT($Api.Partner_Server_URL_480, FIND(&quot;/services/Soap/&quot;, $Api.Partner_Server_URL_480))
        + &quot;/sfc/dist/version/renditionDownload?rendition=ORIGINAL_&quot; + FileType__c
        + &quot;&amp;versionId=&quot; + LEFT(ContentVersionId__c, 15)
        + &quot;&amp;d=/a/&quot; + ImageUrlParameter__c + &quot;&amp;oid=&quot; + LEFT($Organization.Id, 15)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>画像URL</label>
    <type>Text</type>
</CustomField>