sfdx-source/OnlineProfile/main/default/objects/MyProfile__c/fields/ImageUrlParameter__c.field-meta.xml
<CustomField>
    <fullName>ImageUrlParameter__c</fullName>
    <label>画像URLパラメータ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>