sfdx-source/OnlineProfile/main/default/objects/MyProfile__c/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <defaultValue>true</defaultValue>
    <label>メインプロフィール</label>
    <type>Checkbox</type>
</CustomField>