sfdx-source/OnlineProfile/main/default/objects/MyProfile__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>町名・番地</label>
    <type>TextArea</type>
</CustomField>