sfdx-source/OnlineProfile/main/default/objects/MyProfile__c/fields/Tel1__c.field-meta.xml
<CustomField>
    <fullName>Tel1__c</fullName>
    <inlineHelpText>直通番号や内線番号を入力します</inlineHelpText>
    <label>電話番号</label>
    <type>Phone</type>
</CustomField>