sfdx-source/OnlineProfile/main/default/objects/MyProfile__c/fields/Tel__c.field-meta.xml
<CustomField>
    <fullName>Tel__c</fullName>
    <label>代表電話番号</label>
    <type>Phone</type>
</CustomField>