sfdx-source/OnlineProfile/main/default/objects/MyProfile__c/listViews/IsDefault.listView-meta.xml
<ListView>
    <fullName>IsDefault</fullName>
    <columns>NAME</columns>
    <columns>LastName__c</columns>
    <columns>FirstName__c</columns>
    <columns>Email__c</columns>
    <columns>MobilePhone__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>IsDefault__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsDefault__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>メインプロフィール</label>
</ListView>